--- a/Attendance Management System/Forms/TeacherForm.resx
+++ b/Attendance Management System/Forms/TeacherForm.resx
@@ -999,6 +999,9 @@
         763P0GfpM/XZ2gZti7ZJ26ZtZCU8IHnX/cr/D83V+eXa+2Y1AAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="courseBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>114, 17</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>25</value>
   </metadata>
