--- a/Attendance Management System/Forms/StudentForm.ar.resx
+++ b/Attendance Management System/Forms/StudentForm.ar.resx
@@ -156,7 +156,7 @@
     <value>الاسم</value>
   </data>
   <data name="textSearch.Location" type="System.Drawing.Point, System.Drawing">
-    <value>119, 293</value>
+    <value>381, 264</value>
   </data>
   <data name="textSearch.Text" xml:space="preserve">
     <value>بحث</value>
@@ -186,10 +186,13 @@
   <data name="lang.Text" xml:space="preserve">
     <value> En</value>
   </data>
-  <data name="panel1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 57</value>
+  <data name="panelCourses.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top, Bottom, Left</value>
   </data>
-  <data name="panel1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>301, 992</value>
+  <data name="panelCourses.RightToLeft" type="System.Windows.Forms.RightToLeft, System.Windows.Forms">
+    <value>No</value>
+  </data>
+  <data name="panelCourses.Size" type="System.Drawing.Size, System.Drawing">
+    <value>323, 991</value>
   </data>
 </root>
