--- a/Attendance Management System/Forms/StudentForm.en.resx
+++ b/Attendance Management System/Forms/StudentForm.en.resx
@@ -121,10 +121,11 @@
   <data name="lang.Size" type="System.Drawing.Size, System.Drawing">
     <value>100, 32</value>
   </data>
-  <data name="panel1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 57</value>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="panelCourses.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top, Bottom, Left</value>
   </data>
-  <data name="panel1.Size" type="System.Drawing.Size, System.Drawing">
+  <data name="panelCourses.Size" type="System.Drawing.Size, System.Drawing">
     <value>303, 992</value>
   </data>
 </root>
