--- a/Attendance Management System/Forms/FormLogin.en.resx
+++ b/Attendance Management System/Forms/FormLogin.en.resx
@@ -1,17 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
-  <!-- 
+  <!--
     Microsoft ResX Schema 
-    
+
     Version 2.0
-    
-    The primary goals of this format is to allow a simple XML format 
-    that is mostly human readable. The generation and parsing of the 
-    various data types are done through the TypeConverter classes 
+
+    The primary goals of this format is to allow a simple XML format
+    that is mostly human readable. The generation and parsing of the
+    various data types are done through the TypeConverter classes
     associated with the data types.
-    
+
     Example:
-    
+
     ... ado.net/XML headers & schema ...
     <resheader name="resmimetype">text/microsoft-resx</resheader>
     <resheader name="version">2.0</resheader>
@@ -26,36 +26,36 @@
         <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
         <comment>This is a comment</comment>
     </data>
-                
-    There are any number of "resheader" rows that contain simple 
+
+    There are any number of "resheader" rows that contain simple
     name/value pairs.
-    
-    Each data row contains a name, and value. The row also contains a 
-    type or mimetype. Type corresponds to a .NET class that support 
-    text/value conversion through the TypeConverter architecture. 
-    Classes that don't support this are serialized and stored with the 
+
+    Each data row contains a name, and value. The row also contains a
+    type or mimetype. Type corresponds to a .NET class that support
+    text/value conversion through the TypeConverter architecture.
+    Classes that don't support this are serialized and stored with the
     mimetype set.
-    
-    The mimetype is used for serialized objects, and tells the 
-    ResXResourceReader how to depersist the object. This is currently not 
+
+    The mimetype is used for serialized objects, and tells the
+    ResXResourceReader how to depersist the object. This is currently not
     extensible. For a given mimetype the value must be set accordingly:
-    
-    Note - application/x-microsoft.net.object.binary.base64 is the format 
-    that the ResXResourceWriter will generate, however the reader can 
+
+    Note - application/x-microsoft.net.object.binary.base64 is the format
+    that the ResXResourceWriter will generate, however the reader can
     read any of the formats listed below.
-    
+
     mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with 
+    value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
     
     mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with 
+    value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
             : and then encoded with base64 encoding.
 
     mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array 
+    value   : The object must be serialized into a byte array
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
@@ -119,7 +119,14 @@
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBoxClose.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1129, 12</value>
+    <value>1355, 13</value>
+  </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="pictureBoxClose.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 3, 4, 3</value>
+  </data>
+  <data name="pictureBoxClose.Size" type="System.Drawing.Size, System.Drawing">
+    <value>59, 54</value>
   </data>
   <data name="pictureBoxMinimize.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -208,7 +215,13 @@
 </value>
   </data>
   <data name="pictureBoxMinimize.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1050, 12</value>
+    <value>1260, 13</value>
+  </data>
+  <data name="pictureBoxMinimize.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 3, 4, 3</value>
+  </data>
+  <data name="pictureBoxMinimize.Size" type="System.Drawing.Size, System.Drawing">
+    <value>59, 54</value>
   </data>
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -543,6 +556,24 @@
         763P0GfpM/XZ2gZti7ZJ26ZtZCU8IHnX/cr/D83V+eXa+2Y1AAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="pictureBox1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>937, 219</value>
+  </data>
+  <data name="pictureBox1.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 3, 4, 3</value>
+  </data>
+  <data name="pictureBox1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>410, 383</value>
+  </data>
+  <data name="label2.Location" type="System.Drawing.Point, System.Drawing">
+    <value>359, 111</value>
+  </data>
+  <data name="label2.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
+  </data>
+  <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
+    <value>845, 62</value>
+  </data>
   <data name="label2.Text" xml:space="preserve">
     <value>Attendance System Management</value>
   </data>
@@ -550,27 +581,48 @@
   <data name="UserEmail.AutoSize" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="UserEmail.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
+  </data>
+  <data name="UserEmail.Location" type="System.Drawing.Point, System.Drawing">
+    <value>178, 320</value>
+  </data>
+  <data name="UserEmail.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
   </data>
   <data name="UserEmail.RightToLeft" type="System.Windows.Forms.RightToLeft, System.Windows.Forms">
     <value>No</value>
   </data>
   <data name="UserEmail.Size" type="System.Drawing.Size, System.Drawing">
-    <value>425, 21</value>
+    <value>510, 23</value>
   </data>
   <data name="UserEmail.Text" xml:space="preserve">
     <value>Your Email: </value>
   </data>
+  <data name="textBoxEmail.Location" type="System.Drawing.Point, System.Drawing">
+    <value>178, 346</value>
+  </data>
+  <data name="textBoxEmail.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 3, 4, 3</value>
+  </data>
+  <data name="textBoxEmail.Size" type="System.Drawing.Size, System.Drawing">
+    <value>509, 32</value>
+  </data>
   <data name="label1.AutoSize" type="System.Boolean, mscorlib">
     <value>False</value>
+  </data>
+  <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>178, 404</value>
+  </data>
+  <data name="label1.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
   </data>
   <data name="label1.RightToLeft" type="System.Windows.Forms.RightToLeft, System.Windows.Forms">
     <value>No</value>
   </data>
   <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>425, 21</value>
+    <value>510, 23</value>
   </data>
   <data name="label1.Text" xml:space="preserve">
     <value>Password: </value>
@@ -624,6 +676,12 @@
         RERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERE
         RERERERERERkLHbt+jcuWDi+qZFmKwAAAABJRU5ErkJggg==
 </value>
+  </data>
+  <data name="pictureBoxShow.Location" type="System.Drawing.Point, System.Drawing">
+    <value>655, 430</value>
+  </data>
+  <data name="pictureBoxShow.Size" type="System.Drawing.Size, System.Drawing">
+    <value>32, 29</value>
   </data>
   <data name="pictureBoxHide.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -811,6 +869,12 @@
         5qdzt49uPBsAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="pictureBoxHide.Location" type="System.Drawing.Point, System.Drawing">
+    <value>655, 430</value>
+  </data>
+  <data name="pictureBoxHide.Size" type="System.Drawing.Size, System.Drawing">
+    <value>32, 29</value>
+  </data>
   <data name="pictureBoxError.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAMAAAAJbSJIAAAABGdBTUEAALGPC/xhBQAAAIpQTFRF////
@@ -881,22 +945,67 @@
 </value>
   </data>
   <data name="pictureBoxError.Location" type="System.Drawing.Point, System.Drawing">
-    <value>201, 452</value>
+    <value>241, 495</value>
+  </data>
+  <data name="pictureBoxError.Size" type="System.Drawing.Size, System.Drawing">
+    <value>32, 30</value>
+  </data>
+  <data name="labelInvalidUserName.Location" type="System.Drawing.Point, System.Drawing">
+    <value>287, 502</value>
   </data>
   <data name="labelInvalidUserName.RightToLeft" type="System.Windows.Forms.RightToLeft, System.Windows.Forms">
     <value>No</value>
   </data>
   <data name="labelInvalidUserName.Size" type="System.Drawing.Size, System.Drawing">
-    <value>207, 21</value>
+    <value>256, 23</value>
   </data>
   <data name="labelInvalidUserName.Text" xml:space="preserve">
     <value>Invalid Email or password</value>
   </data>
+  <data name="buttonClear.Location" type="System.Drawing.Point, System.Drawing">
+    <value>208, 651</value>
+  </data>
+  <data name="buttonClear.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 3, 4, 3</value>
+  </data>
+  <data name="buttonClear.Size" type="System.Drawing.Size, System.Drawing">
+    <value>214, 32</value>
+  </data>
+  <data name="buttonLogin.Location" type="System.Drawing.Point, System.Drawing">
+    <value>443, 651</value>
+  </data>
+  <data name="buttonLogin.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 3, 4, 3</value>
+  </data>
+  <data name="buttonLogin.Size" type="System.Drawing.Size, System.Drawing">
+    <value>222, 32</value>
+  </data>
   <data name="buttonLogin.Text" xml:space="preserve">
     <value>Log in </value>
   </data>
+  <data name="textBoxPassword.Location" type="System.Drawing.Point, System.Drawing">
+    <value>178, 430</value>
+  </data>
+  <data name="textBoxPassword.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 3, 4, 3</value>
+  </data>
+  <data name="textBoxPassword.Size" type="System.Drawing.Size, System.Drawing">
+    <value>509, 32</value>
+  </data>
+  <data name="buttonLanguage.Location" type="System.Drawing.Point, System.Drawing">
+    <value>937, 609</value>
+  </data>
+  <data name="buttonLanguage.Size" type="System.Drawing.Size, System.Drawing">
+    <value>410, 56</value>
+  </data>
   <data name="buttonLanguage.Text" xml:space="preserve">
     <value>Language: English</value>
+  </data>
+  <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
+    <value>12, 23</value>
+  </data>
+  <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
+    <value>1440, 820</value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -1153,5 +1262,8 @@
         GhH9N8akNwJgUCBh8GvSh3T8oFW7Euv073X6Z4O2HOq0OPhnPHxZq3ZqxiOpCTyuffUx/fuYXsV7NOHH
         tBDE9d8ZopcR/n851ITJBURGvQAAAABJRU5ErkJggg==
 </value>
+  </data>
+  <data name="$this.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>7, 5, 7, 5</value>
   </data>
 </root>
